--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
-      background: #f4c2c2;
+      font-family: Lucida Handwriting ,  cursive; 
+      background: #ffffff;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -24,7 +24,7 @@
 
     /* Login Container */
     .login-container {
-      background: #a15d5d;
+      background: #ce1b47;
       padding: 2rem;
       border-radius: 10px;
       width: 100%;
@@ -62,7 +62,7 @@
 
     /* Login Button */
     .login-button {
-      background: #a15d5d;
+      background: #ad1037;
       border: none;
       color: #fff;
       padding: 0.8rem 1.5rem;
@@ -73,7 +73,7 @@
     }
 
     .login-button:hover {
-      background: #f4c2c2;
+      background: #ff2158;
     }
 
     /* Sign-Up Text */
