--- a/seller.html
+++ b/seller.html
@@ -6,7 +6,7 @@
     <title>MASHT Seller Dashboard</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Lucida Handwriting', cursive;
             background-color: #f9f9f9;
             margin: 0;
             padding: 0;
