--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Jewelry Website Sign-Up</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Lucida Handwriting', cursive;
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #f9f4ef, #ffffff);
