--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div>
                 <h4 class="text-lg text-rose-600">Contact Us</h4>
                 <p class="text-gray-700">Email: contact@masht.com</p>
-                <p class="text-gray-700">Phone: +1 234 567 890</p>
+                <p class="text-gray-700">Phone: +91 78048 91654</p>
                 <button  class="mt-4 px-6 py-2 bg-pink-500 text-white rounded-full text-lg">
                     <a href="seller.html" class="text-gray-700 hover:underline">Sellers Dashboard</a>
                 </button>
