--- a/location.html
+++ b/location.html
@@ -83,7 +83,7 @@
 <body>
 
 <header>
-    <img src="./IMAGES/MASHT.png" alt="MASHT Logo">
+    <img src="MASHT.png" alt="MASHT Logo">
     <h2 class="header-title">MASHT</h2>
     <h1 class="header-title">Locate a Store</h1>
 </header>
